tests/reference/asr-func_parameter_type-a49e846.stderr
semantic error: Type mismatch in argument `x`: expected `integer(4)` but got `real(4)`.
 --> tests/errors/func_parameter_type.f90:2:14
  |
2 |   print *, f(42.9)
  |              ^^^^ 
